--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
             </div>
         </div>
     </header>
-    <h1>Hello</h1>
+
+    <section class="sub-header">
+        <img src="./assets/logos.png" alt="">
+        <div>
+            <h4>Bundle with any Hulu plan & save</h4>
+            <h3>Get Hulu, Disney+, and ESPN+.</h3>
+            <a href="#" class="sub-link">Details</a>
+        </div>
+        <div>
+            <a href="#" class="btn btn-outline">Get Bundle</a>
+            <a href="#" class="sub-link">Terms apply</a>
+        </div>
+    </section>
     <script src="js/main.js"></script>
 
 </body>
