--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
             <a href="#" class="sub-link">Terms apply</a>
         </div>
     </section>
+
+    <section class="categories">
+        <h4>Included an all plans</h4>
+        <div class="text-xl">All the TV You Love</div>
+        <div class="sub-text">
+            Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu Originals, kids shows, and more.
+        </div>
+
+    </section>
+
     <script src="js/main.js"></script>
 
 </body>
