--- a/index.html
+++ b/index.html
@@ -98,9 +98,114 @@
                 </div>
             </div>
         </div>
-
-
     </section>
+
+    <section class="live">
+        <div class="live-border">
+            <h4>Hulu + Live TV</h4>
+            <div class="text-xl">
+                Live TV Makes IT Better
+            </div>
+            <div class="sub-text">Make the switch from cable, Get 75+ top channels with your favorite live sports, news, and events - plus the entire Hulu streaming library.
+            </div>
+            <div class="legal-text"> Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details
+            </div>
+            <a href="#">View Channels in Your Area</a>
+        </div>
+    </section>
+
+    <section class="live-sports">
+        <div class="live-sports-content">
+            <div class="text-xl">
+                Live Sports
+            </div>
+            <div class="sub-text">
+                Catch your games at home or on the go. Stream live games from major collage and pro leagues including the NCCA, NBA, NFL, and more.
+            </div>
+            <div class="live-sports-logos">
+                <div>
+                    <img src="./assets/live-sports-logo-1.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/live-sports-logo-2.png" alt="">
+                </div>
+                <div>
+                    <img src="./assets/live-sports-logo-3.svg" alt="">
+                </div>
+                <div>
+                    <img src="./assets/live-sports-logo-4.png" alt="">
+                </div>
+            </div>
+            <div class="legal-text">
+                Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-lists">
+                <ul>
+                    <li class="list-head">BROWSE</li>
+                    <li class="list-head"><a href="#">Streaming Library</a></li>
+                    <li class="list-head"><a href="#">Live TV</a></li>
+                    <li class="list-head"><a href="#">Live News</a></li>
+                    <li class="list-head"><a href="#">Live Sports</a></li>
+
+                </ul>
+
+                <ul>
+                    <li class="list-head"><a href="#">TV Shows</a></li>
+                    <li class="list-head"><a href="#">Movies</a></li>
+                    <li class="list-head"><a href="#">Originals</a></li>
+                    <li class="list-head"><a href="#">Networks</a></li>
+                    <li class="list-head"><a href="#">Kids</a></li>
+                    <li class="list-head"><a href="#">FX on Hulu</a></li>
+                </ul>
+
+                <ul>
+                    <li class="list-head"><a href="#">HBO Max</a></li>
+                    <li class="list-head"><a href="#">Cinemax</a></li>
+                    <li class="list-head"><a href="#">Showtime</a></li>
+                    <li class="list-head"><a href="#">Networks</a></li>
+                    <li class="list-head"><a href="#">STARZ</a></li>
+                </ul>
+
+                <ul>
+                    <li class="list-head"><a href="#">Hulu, Disney+, and ESPN+</a></li>
+                    <li class="list-head"><a href="#">Disney bundle with Hulu(No Ads)</a></li>
+                    <li class="list-head"><a href="#">Disney bundle with Hulu + Live TV</a></li>
+                    <li class="list-head"><a href="#">Student Discount</a></li>
+                </ul>
+
+                <ul>
+                    <li class="list-head">HELP</li>
+                    <li class="list-head"><a href="#">Account & Billing</a></li>
+                    <li class="list-head"><a href="#">Plans & Pricing</a></li>
+                    <li class="list-head"><a href="#">Supported Devices</a></li>
+                    <li class="list-head"><a href="#">Accessibility</a></li>
+                </ul>
+
+                <ul>
+                    <li class="list-head">ABOUT US</li>
+                    <li class="list-head"><a href="#">Press</a></li>
+                    <li class="list-head"><a href="#">Jobs</a></li>
+                    <li class="list-head"><a href="#">Contact</a></li>
+                </ul>
+
+            </div>
+            <div class="divider">
+
+            </div>
+            <div class="social-icons">
+                <a href="#"><img src="./assets/facebook.svg" alt=""></a>
+                <a href="#"><img src="./assets/twitter.svg" alt=""></a>
+                <a href="#"><img src="./assets/youtube.svg" alt=""></a>
+                <a href="#"><img src="./assets/instagram.svg" alt=""></a>
+
+            </div>
+        </div>
+    </footer>
 
     <script src="js/main.js"></script>
 
